# raytracer-cuda

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  gpgpu-bench.py
configs/: cpu-omp.yaml  cpu.yaml  cuda.yaml  iter.yaml  local.yaml
include/: array.hh  camera.hh  color.hh  debug.hh  image.hh  light.hh  lighting.hh  obj-parser.hh  ray.hh  renderer.hh  scene.hh  shape.hh  texture.hh  util.hh  vector3.hh
src/: camera.cc  circle.cc  color.cc  image.cc  main.cc  main.cu  renderer.cc  triangle.cc  vector3.cc
src/device/: gm_to_sm.cu  random.cu  renderer.cu
